--- a/package.json
+++ b/package.json
@@ -4,20 +4,36 @@
   "description": "Task List API",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "NODE_ENV=test mocha test/**/*.js"
   },
   "author": "Rad10head7",
   "license": "ISC",
   "dependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babelify": "^10.0.0",
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "browser-request": "^0.3.3",
+    "browserify": "^17.0.0",
     "consign": "^0.1.6",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "http-server": "^0.12.3",
     "jwt-simple": "^0.5.6",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "sequelize": "^3.19.2",
-    "sqlite3": "^5.0.0"
+    "sqlite3": "^5.0.0",
+    "tiny-emitter": "^2.1.0"
+  },
+  "devDependencies": {
+    "apidoc": "^0.26.0",
+    "babel-register": "^6.26.0",
+    "chai": "^4.2.0",
+    "eslint": "^7.15.0",
+    "mocha": "^8.2.1",
+    "babel-cli": "^6.26.0",
+    "supertest": "^6.0.1"
   }
 }
